# voxkey

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  voxkey.spec
.github/ISSUE_TEMPLATE/: bug_report.md  new_backend.md
.github/workflows/: release.yml
data/: 90-voxkey.preset  io.github.hy26v.Voxkey.Daemon.service  io.github.hy26v.Voxkey.desktop  io.github.hy26v.Voxkey.metainfo.xml  voxkey.service
src/: config.rs  dbus.rs  desktop.rs  injector.rs  main.rs  model_download.rs  models.rs  persistence.rs  portal.rs  recorder.rs  registry.rs  shortcuts.rs  state.rs  streaming.rs  transcriber.rs
tests/: conftest.py  requirements.txt  test_capabilities.py  test_dictation_cycle.py  test_error_recovery.py  test_parakeet_transcription.py  test_persistence.py  test_rapid_cycles.py  test_remote_desktop.py  test_shortcut_lifecycle.py  test_state_machine.py  test_text_injection.py  test_unicode.py
tests/helpers/: __init__.py  dbus_portal.py  mock_portal.py  virtual_microphone.py
voxkey-ipc/: Cargo.toml
voxkey-ipc/src/: lib.rs
voxkey-settings/: Cargo.toml
voxkey-settings/src/: daemon_client.rs  gui_settings.rs  main.rs  window.rs
