[workspace]
members = ["voxkey-ipc", "voxkey-settings"]

[package]
name = "voxkey"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "Wayland voice dictation daemon"
repository = "https://github.com/hy26v/voxkey"

[dependencies]
voxkey-ipc = { path = "voxkey-ipc" }
ashpd = { version = "0.13.0-alpha", default-features = false, features = ["tokio", "global_shortcuts", "remote_desktop", "screencast"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
cpal = "0.16"
hound = "3.5"
xkbcommon = "0.9"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls", "stream"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
base64 = "0.22"
http = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sherpa-rs = { version = "0.6", features = ["download-binaries"] }
tempfile = "3"
