[package]
name = "voxkey-settings"
version = "0.3.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "voxkey-settings"
path = "src/main.rs"

[dependencies]
voxkey-ipc = { path = "../voxkey-ipc" }
gtk4 = { version = "0.10", features = ["v4_14"] }
libadwaita = { version = "0.8", features = ["v1_6"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
